# inventory4ce

./: compose.yaml  flake.nix  pyproject.toml
inventory4ce/static/css/: style.css
inventory4ce/templates/: Inventory.html  Main.html
