[tool.poetry]
name = "inventory4ce"
version = "1.0.0"
description = ""
authors = ["Kalauerclub <aramark@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.2"
qrcode = "^7.4.2"
cryptography = "^44.0.2"

[tool.poetry.scripts]
inventory4ce = "inventory4ce.app:run"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
